packages/ui/src/components/Forms/FieldContainer/index.css
:where(.cui-field-container) {
	--cui-field-container--body-content-height: ;
	gap: calc(3 * var(--cui-gap));
	flex-direction: column;
}

:where(.cui-field-container:focus-within) {
	color: rgb(var(--cui-color--accent-rgb-50));
}

:where(.cui-field-container:not([data-active]) > .cui-field-container-label) {
	color: rgb(var(--cui-color--strong-rgb-50));
}

:where(.cui-field-container-label) {
	display: flex;
	flex-direction: column;
	gap: calc(2 * var(--cui-gap));
}

:where(.cui-field-container[data-label-position="left"] > .cui-field-container-label),
:where(.cui-field-container[data-label-position="right"] > .cui-field-container-label) {
	flex-direction: row;
}

:where(.cui-field-container[data-label-position="top"] > .cui-field-container-label),
:where(.cui-field-container[data-label-position="bottom"] > .cui-field-container-label) {
	flex-direction: column;
}

:where(.cui-field-container[data-label-position="right"]  > .cui-field-container-label > .cui-field-container-body),
:where(.cui-field-container[data-label-position="bottom"]  > .cui-field-container-label > .cui-field-container-body) {
	order: 1;
}
:where(.cui-field-container[data-label-position="right"]  > .cui-field-container-label > .cui-field-container-header),
:where(.cui-field-container[data-label-position="bottom"]  > .cui-field-container-label > .cui-field-container-header) {
	order: 2;
}

:where(.cui-field-container[data-label-position="left"]  > .cui-field-container-label > .cui-field-container-header),
:where(.cui-field-container[data-label-position="right"]  > .cui-field-container-label > .cui-field-container-header) {
	justify-content: center;
	align-self: start;
	min-height: var(--cui-field-container--body-content-height);
}
:where(.cui-field-container[data-label-position="right"][data-display="block"]  > .cui-field-container-label > .cui-field-container-header) {
	text-align: right;
}

:where(.cui-field-container),
:where(.cui-field-container[data-display="block"]) {
	display: flex;
}
:where(.cui-field-container[data-display="block"]  > .cui-field-container-label > .cui-field-container-header) {
	flex: 2 2 0px;
}
:where(.cui-field-container[data-display="block"]  > .cui-field-container-label > .cui-field-container-body) {
	flex: 5 5 0px;
}

:where(.cui-field-container[data-display="inline"]) {
	display: inline-flex;
}

:where(.cui-field-container[data-size="small"]) {
	font-size: var(--cui-font-size--controls-small);
}

:where(.cui-field-container[data-size="large"]) {
	font-size: var(--cui-font-size--controls-large);
}

:where(.cui-field-container-required-asterisk) {
	color: rgb(var(--cui-color--accent-rgb-50));
}

:where(.cui-field-container-header),
:where(.cui-field-container-body) {
	display: flex;
	flex-direction: column;
	gap: var(--cui-gap);
}

:where(.cui-field-container-header) {
	font-weight: 700;
	user-select: none;
}

:where(.cui-field-container-body-content-description) {
	font-weight: 500;
	color: rgba(var(--cui-color--rgb-50), var(--cui-opacity--medium));
	display: block;
	font-size: 0.9em;
	line-height: 1.2;
}

:where(.cui-field-container-body-content > [contenteditable=false]) {
	display: contents;
}

